Add Score Bar from JoubelUI

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,3 @@
 $width-component: 1040px;
 
-$element-displacement: 3em;
-$element-displacement-half: $element-displacement / 2;
+$element-displacement: (3.875em / 2);
