Simplify semantics and fix image support

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
-$width-component: 1040px;
+$width-component: 60em;
 
 $element-displacement: (3.875em / 2);
+
+$choice-padding: 1.458em;
+$choice-height: 1em + ($choice-padding * 2);
