Add puzzle edges to Choices

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,5 @@ $element-displacement: 100% / (1 - $displacement) * $displacement;
 
 $choice-padding: 1.458em;
 $choice-height: 1em + ($choice-padding * 2);
+
+$border-radius-choice: 0.5em;
